--- a/main.html
+++ b/main.html
@@ -49,27 +49,81 @@
             <sec class="search-sec">
                 <h2>搜尋</h2>
                 <ul class="search-class">
-                    <li><a href="">搭配</a></li>
-                    <li><a href="">用戶</a></li>
-                    <li><a href="">服飾</a></li>
-                    <li><a href="">店鋪</a></li>
-                    <li><a href="">品牌</a></li>
+                    <li><a href=""><i class="far fa-camera"></i>搭配</a></li>
+                    <li><a href=""><i class="far fa-user"></i>用戶</a></li>
+                    <li><a href=""><i class="far fa-tshirt"></i>服飾</a></li>
+                    <li><a href=""><i class="far fa-store"></i>店鋪</a></li>
+                    <li><a href=""><i class="far fa-tag"></i>品牌</a></li>
                 </ul>
             </sec>
             <hr>
             <sec class="fashion-sec">
                 <h2>時尚博主</h2>
                 <ul class="fashion-class">
-                    <li><a href="">Bc TW</a></li>
-                    <li><a href="">Morin</a></li>
-                    <li><a href="">AshWang</a></li>
-                    <li><a href="">ChiChi</a></li>
-                    <li><a href="">Chen</a></li>
-                    <li><a href="">W.</a></li>
-                    <li><a href="">YU Select</a></li>
-                    <li><a href="">Sera</a></li>
-                    <li><a href="">Talos. fz</a></li>
-                    <button>瀏覽更多</button>
+                    <li class="blogger-list">
+                        <a href=""><img src="./images/blogger (1).jpg"></a>
+                        <div class="blogger-detail">
+                            <div class="blogger">aimee</div>
+                            <div><i class="far fa-user"></i>7,785</div>
+                        </div>
+                    </li>
+                    <li class="blogger-list">
+                        <a href=""><img src="./images/blogger (2).jpg"></a>
+                        <div class="blogger-detail">
+                            <div class="blogger">Hi Kino</div>
+                            <div><i class="far fa-user"></i>4,934</div>
+                        </div>
+                    </li>
+                    <li class="blogger-list">
+                        <a href=""><img src="./images/blogger (3).jpg"></a>
+                        <div class="blogger-detail">
+                            <div class="blogger">kiki</div>
+                            <div><i class="far fa-user"></i>397,158</div>
+                        </div>
+                    </li>
+                    <li class="blogger-list">
+                        <a href=""><img src="./images/blogger (4).jpg"></a>
+                        <div class="blogger-detail">
+                            <div class="blogger">Sera</div>
+                            <div><i class="far fa-user"></i>23,533</div>
+                        </div>
+                    </li>
+                    <li class="blogger-list">
+                        <a href=""><img src="./images/blogger (5).jpg"></a>
+                        <div class="blogger-detail">
+                            <div class="blogger">Q喵</div>
+                            <div><i class="far fa-user"></i>23,798</div>
+                        </div>
+                    </li>
+                    <li class="blogger-list">
+                        <a href=""><img src="./images/blogger (6).jpg"></a>
+                        <div class="blogger-detail">
+                            <div class="blogger">Haochanghxx</div>
+                            <div><i class="far fa-user"></i>56,049</div>
+                        </div>
+                    </li>
+                    <li class="blogger-list">
+                        <a href=""><img src="./images/blogger (7).jpg"></a>
+                        <div class="blogger-detail">
+                            <div class="blogger">wuwei</div>
+                            <div><i class="far fa-user"></i>4,627</div>
+                        </div>
+                    </li>
+                    <li class="blogger-list">
+                        <a href=""><img src="./images/blogger (8).jpg"></a>
+                        <div class="blogger-detail">
+                            <div class="blogger">Chen</div>
+                            <div><i class="far fa-user"></i>9,085</div>
+                        </div>
+                    </li>
+                    <li class="blogger-list">
+                        <a href=""><img src="./images/blogger (9).jpg"></a>
+                        <div class="blogger-detail">
+                            <div class="blogger">WEDNESDAY</div>
+                            <div><i class="far fa-user"></i>171,662</div>
+                        </div>
+                    </li>
+                    <button class="see-more">瀏覽更多</button>
                 </ul>
             </sec>
             <hr>
@@ -86,7 +140,7 @@
                     <li><a href="">VANS</a></li>
                     <li><a href="">Dr.Martens</a></li>
                     <li><a href="">NEW BALANCE</a></li>
-                    <button>瀏覽更多</button>
+                    <button class="see-more">瀏覽更多</button>
                 </ul>
             </sec>
             <hr>
@@ -113,13 +167,10 @@
                     <li><a href="">裙子</a></li>
                     <li><a href="">鞋子</a></li>
                     <li><a href="">帽子</a></li>
-                    <button>瀏覽更多</button>
+                    <button class="see-more">瀏覽更多</button>
                 </ul>
             </sec>
         </div>
-
-
-
         <div class="content">
             <div class="title">
                 <p>推薦的搭配</p>
@@ -127,40 +178,40 @@
             </div>
             <div class="card-container">
                 <div class="card">
-                    <a href=""><img src="./WEAR/images/outfit (1).jpg"></a>
+                    <a href=""><img src="./images/outfit (1).jpg"></a>
                 </div>
                 <div class="card">
-                    <a href=""><img src="./WEAR/images/outfit (2).jpg"></a>
+                    <a href=""><img src="./images/outfit (2).jpg"></a>
                 </div>
                 <div class="card">
-                    <a href=""><img src="./WEAR/images/outfit (3).jpg"></a>
+                    <a href=""><img src="./images/outfit (3).jpg"></a>
                 </div>
                 <div class="card">
-                    <a href=""><img src="./WEAR/images/outfit (4).jpg"></a>
+                    <a href=""><img src="./images/outfit (4).jpg"></a>
                 </div>
                 <div class="card">
-                    <a href=""><img src="./WEAR/images/outfit (5).jpg"></a>
+                    <a href=""><img src="./images/outfit (5).jpg"></a>
                 </div>
                 <div class="card">
-                    <a href=""><img src="./WEAR/images/outfit (6).jpg"></a>
+                    <a href=""><img src="./images/outfit (6).jpg"></a>
                 </div>
                 <div class="card">
-                    <a href=""><img src="./WEAR/images/outfit (7).jpg"></a>
+                    <a href=""><img src="./images/outfit (7).jpg"></a>
                 </div>
                 <div class="card">
-                    <a href=""><img src="./WEAR/images/outfit (8).jpg"></a>
+                    <a href=""><img src="./images/outfit (8).jpg"></a>
                 </div>
                 <div class="card">
-                    <a href=""><img src="./WEAR/images/outfit (9).jpg"></a>
+                    <a href=""><img src="./images/outfit (9).jpg"></a>
                 </div>
                 <div class="card">
-                    <a href=""><img src="./WEAR/images/outfit (10).jpg"></a>
+                    <a href=""><img src="./images/outfit (10).jpg"></a>
                 </div>
                 <div class="card">
-                    <a href=""><img src="./WEAR/images/outfit (11).jpg"></a>
+                    <a href=""><img src="./images/outfit (11).jpg"></a>
                 </div>
                 <div class="card">
-                    <a href=""><img src="./WEAR/images/outfit (12).jpg"></a>
+                    <a href=""><img src="./images/outfit (12).jpg"></a>
                 </div>
             </div>
         </div>
