--- a/main.html
+++ b/main.html
@@ -61,63 +61,63 @@
                 <h2>時尚博主</h2>
                 <ul class="fashion-class">
                     <li class="blogger-list">
-                        <a href=""><img src="./images/blogger (1).jpg"></a>
+                        <a href=""><img class="round" src="./images/blogger (1).jpg"></a>
                         <div class="blogger-detail">
                             <div class="blogger">aimee</div>
                             <div><i class="far fa-user"></i>7,785</div>
                         </div>
                     </li>
                     <li class="blogger-list">
-                        <a href=""><img src="./images/blogger (2).jpg"></a>
+                        <a href=""><img class="round" src="./images/blogger (2).jpg"></a>
                         <div class="blogger-detail">
                             <div class="blogger">Hi Kino</div>
                             <div><i class="far fa-user"></i>4,934</div>
                         </div>
                     </li>
                     <li class="blogger-list">
-                        <a href=""><img src="./images/blogger (3).jpg"></a>
+                        <a href=""><img class="round" src="./images/blogger (3).jpg"></a>
                         <div class="blogger-detail">
                             <div class="blogger">kiki</div>
                             <div><i class="far fa-user"></i>397,158</div>
                         </div>
                     </li>
                     <li class="blogger-list">
-                        <a href=""><img src="./images/blogger (4).jpg"></a>
+                        <a href=""><img class="round" src="./images/blogger (4).jpg"></a>
                         <div class="blogger-detail">
                             <div class="blogger">Sera</div>
                             <div><i class="far fa-user"></i>23,533</div>
                         </div>
                     </li>
                     <li class="blogger-list">
-                        <a href=""><img src="./images/blogger (5).jpg"></a>
+                        <a href=""><img class="round" src="./images/blogger (5).jpg"></a>
                         <div class="blogger-detail">
                             <div class="blogger">Q喵</div>
                             <div><i class="far fa-user"></i>23,798</div>
                         </div>
                     </li>
                     <li class="blogger-list">
-                        <a href=""><img src="./images/blogger (6).jpg"></a>
+                        <a href=""><img class="round" src="./images/blogger (6).jpg"></a>
                         <div class="blogger-detail">
                             <div class="blogger">Haochanghxx</div>
                             <div><i class="far fa-user"></i>56,049</div>
                         </div>
                     </li>
                     <li class="blogger-list">
-                        <a href=""><img src="./images/blogger (7).jpg"></a>
+                        <a href=""><img class="round" src="./images/blogger (7).jpg"></a>
                         <div class="blogger-detail">
                             <div class="blogger">wuwei</div>
                             <div><i class="far fa-user"></i>4,627</div>
                         </div>
                     </li>
                     <li class="blogger-list">
-                        <a href=""><img src="./images/blogger (8).jpg"></a>
+                        <a href=""><img class="round" src="./images/blogger (8).jpg"></a>
                         <div class="blogger-detail">
                             <div class="blogger">Chen</div>
                             <div><i class="far fa-user"></i>9,085</div>
                         </div>
                     </li>
                     <li class="blogger-list">
-                        <a href=""><img src="./images/blogger (9).jpg"></a>
+                        <a href=""><img class="round" src="./images/blogger (9).jpg"></a>
                         <div class="blogger-detail">
                             <div class="blogger">WEDNESDAY</div>
                             <div><i class="far fa-user"></i>171,662</div>
@@ -177,46 +177,247 @@
                 <a href="">來自WEAR的通知</a>
             </div>
             <div class="card-container">
-                <div class="card">
+                <div class="card large">
                     <a href=""><img src="./images/outfit (1).jpg"></a>
+                    <div class="card-detail">
+                        <div class="row">
+                            <a href=""><img class="round" src="./images/blogger (10).jpg"></a>
+                            <div class="blogger-detail">
+                                <div class="blogger">WEDNESDAY</div>
+                                <div>177cm</div>
+                            </div>
+                        </div>
+                        <button class="follow">
+                            <i class="far fa-user-plus"></i>
+                            <div>追蹤</div>
+                        </button>
+                    </div>
                 </div>
-                <div class="card">
+                <div class="card large">
                     <a href=""><img src="./images/outfit (2).jpg"></a>
+                    <div class="card-detail">
+                        <div class="row">
+                            <a href=""><img class="round" src="./images/blogger (11).jpg"></a>
+                            <div class="blogger-detail">
+                                <div class="blogger">CHIEN</div>
+                                <div>160cm</div>
+                            </div>
+                        </div>
+                        <button class="follow">
+                            <i class="far fa-user-plus"></i>
+                            <div>追蹤</div>
+                        </button>
+                    </div>
+
                 </div>
                 <div class="card">
                     <a href=""><img src="./images/outfit (3).jpg"></a>
+                    <div class="card-detail">
+                        <div class="row">
+                            <a href=""><img class="round" src="./images/blogger (12).jpg"></a>
+                            <div class="blogger-detail">
+                                <div class="blogger">wen</div>
+                                <div>155cm</div>
+                            </div>
+                        </div>
+                        <button class="follow">
+                            <i class="far fa-user-plus"></i>
+                            <div>追蹤</div>
+                        </button>
+                    </div>
+
                 </div>
                 <div class="card">
                     <a href=""><img src="./images/outfit (4).jpg"></a>
+                    <div class="card-detail">
+                        <div class="row">
+                            <a href=""><img class="round" src="./images/blogger (13).jpg"></a>
+                            <div class="blogger-detail">
+                                <div class="blogger">pupu</div>
+                                <div>166cm</div>
+                            </div>
+                        </div>
+                        <button class="follow">
+                            <i class="far fa-user-plus"></i>
+                            <div>追蹤</div>
+                        </button>
+                    </div>
+
                 </div>
                 <div class="card">
                     <a href=""><img src="./images/outfit (5).jpg"></a>
+                    <div class="card-detail">
+                        <div class="row">
+                            <a href=""><img class="round" src="./images/blogger (14).jpg"></a>
+                            <div class="blogger-detail">
+                                <div class="blogger">Xia</div>
+                                <div>157cm</div>
+                            </div>
+                        </div>
+                        <button class="follow">
+                            <i class="far fa-user-plus"></i>
+                            <div>追蹤</div>
+                        </button>
+                    </div>
+
                 </div>
                 <div class="card">
                     <a href=""><img src="./images/outfit (6).jpg"></a>
+                    <div class="card-detail">
+                        <div class="row">
+                            <a href=""><img class="round" src="./images/blogger (15).jpg"></a>
+                            <div class="blogger-detail">
+                                <div class="blogger">tingting</div>
+                                <div>153cm</div>
+                            </div>
+                        </div>
+                        <button class="follow">
+                            <i class="far fa-user-plus"></i>
+                            <div>追蹤</div>
+                        </button>
+                    </div>
+
                 </div>
                 <div class="card">
                     <a href=""><img src="./images/outfit (7).jpg"></a>
+                    <div class="card-detail">
+                        <div class="row">
+                            <a href=""><img class="round" src="./images/blogger (16).jpg"></a>
+                            <div class="blogger-detail">
+                                <div class="blogger">shan</div>
+                                <div>166cm</div>
+                            </div>
+                        </div>
+                        <button class="follow">
+                            <i class="far fa-user-plus"></i>
+                            <div>追蹤</div>
+                        </button>
+                    </div>
+
                 </div>
                 <div class="card">
                     <a href=""><img src="./images/outfit (8).jpg"></a>
+                    <div class="card-detail">
+                        <div class="row">
+                            <a href=""><img class="round" src="./images/blogger (17).jpg"></a>
+                            <div class="blogger-detail">
+                                <div class="blogger">TINA</div>
+                                <div>177cm</div>
+                            </div>
+                        </div>
+                        <button class="follow">
+                            <i class="far fa-user-plus"></i>
+                            <div>追蹤</div>
+                        </button>
+                    </div>
+
                 </div>
-                <div class="card">
+                <div class="card large">
                     <a href=""><img src="./images/outfit (9).jpg"></a>
+                    <div class="card-detail">
+                        <div class="row">
+                            <a href=""><img class="round" src="./images/blogger (18).jpg"></a>
+                            <div class="blogger-detail">
+                                <div class="blogger">W.</div>
+                                <div>170cm</div>
+                            </div>
+                        </div>
+                        <button class="follow">
+                            <i class="far fa-user-plus"></i>
+                            <div>追蹤</div>
+                        </button>
+                    </div>
+
                 </div>
-                <div class="card">
+                <div class="card large">
                     <a href=""><img src="./images/outfit (10).jpg"></a>
+                    <div class="card-detail">
+                        <div class="row">
+                            <a href=""><img class="round" src="./images/blogger (19).jpg"></a>
+                            <div class="blogger-detail">
+                                <div class="blogger">Benbenn.</div>
+                                <div>172cm</div>
+                            </div>
+                        </div>
+                        <button class="follow">
+                            <i class="far fa-user-plus"></i>
+                            <div>追蹤</div>
+                        </button>
+                    </div>
+
                 </div>
                 <div class="card">
                     <a href=""><img src="./images/outfit (11).jpg"></a>
+                    <div class="card-detail">
+                        <div class="row">
+                            <a href=""><img class="round" src="./images/blogger (20).jpg"></a>
+                            <div class="blogger-detail">
+                                <div class="blogger">yeajen</div>
+                                <div>170cm</div>
+                            </div>
+                        </div>
+                        <button class="follow">
+                            <i class="far fa-user-plus"></i>
+                            <div>追蹤</div>
+                        </button>
+                    </div>
+
                 </div>
                 <div class="card">
                     <a href=""><img src="./images/outfit (12).jpg"></a>
+                    <div class="card-detail">
+                        <div class="row">
+                            <a href=""><img class="round" src="./images/blogger (21).jpg"></a>
+                            <div class="blogger-detail">
+                                <div class="blogger">tetsu_su</div>
+                                <div>159cm</div>
+                            </div>
+                        </div>
+                        <button class="follow">
+                            <i class="far fa-user-plus"></i>
+                            <div>追蹤</div>
+                        </button>
+                    </div>
                 </div>
+                <div class="card">
+                    <a href=""><img src="./images/outfit (14).jpg"></a>
+                    <div class="card-detail">
+                        <div class="row">
+                            <a href=""><img class="round" src="./images/blogger (22).jpg"></a>
+                            <div class="blogger-detail">
+                                <div class="blogger">tetsu_su</div>
+                                <div>159cm</div>
+                            </div>
+                        </div>
+                        <button class="follow">
+                            <i class="far fa-user-plus"></i>
+                            <div>追蹤</div>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <button class="see-more">瀏覽更多</button>
+            <hr>
+            <p>來自WEAR的通知</p>
+            <ul>
+                <li><a href="">關於終止支援部分系統OS的通知</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="banner row">
+        <img src="images/banner.png">
+        <div>
+            <h3>日本最大潮流搭配手機應用程式WEAR</h3>
+            <p>可以從1000万個時尚搭配當中檢索到最適合你的搭配
+                <br>和穿搭技巧。下載量超過1500萬！
+            </p>
+            <div class="row app">
+                <a href=""><img src="./images/downloadapple.png"></a>
+                <a href=""><img src="./images/downloadgoogle.png"></a>
+                <a href="">關於應用軟體</a>
             </div>
         </div>
     </div>
-    </main>
 </body>
 
 </html>
