--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
     <header class="nav-sec">
         <div class="box">
             <div class="nav-wrapper row">
-                <div class="input-field">
+                <div class="input-field row">
                     <i class="fas fa-search icon"></i>
                     <input class="search" type="text" placeholder="檢索搭配">
                 </div>
@@ -418,6 +418,63 @@
             </div>
         </div>
     </div>
+    <footer>
+        <div class="bottom-about row">
+            <ul>
+                <li><a href="">WEAR</a></li>
+                <li><a href="">ZOZOTOWN</a></li>
+                <li><a href="">ZOZOSHOES</a></li>
+                <li><a href="">ZOZOUSED</a></li>
+            </ul>
+            <div class="separate"></div>
+            <ul>
+                <li><a href="">搭配總覽</a></li>
+                <li><a href="">用戶總覽</a></li>
+                <li><a href="">單品總覽</a></li>
+                <li><a href="">商店總覽</a></li>
+                <li><a href="">品牌總覽</a></li>
+                <li><a href="">分類總覽</a></li>
+            </ul>
+            <ul>
+                <li><a href="">搭配排行</a></li>
+                <li><a href="">用戶排行</a></li>
+                <li><a href="">收藏夾排行</a></li>
+            </ul>
+            <div class="separate"></div>
+            <ul>
+                <li><a href="">給新加入者</a></li>
+                <li><a href="">協助</a></li>
+                <li><a href="">詢問</a></li>
+                <li><a href="">網站導覽</a></li>
+            </ul>
+            <div class="separate"></div>
+            <ul>
+                <li><a href="">iPhone應用軟體</a></li>
+                <li><a href="">Android應用軟體</a></li>
+                <li><a href=""><i class="fab fa-twitter"></i>Twitter</a></li>
+                <li><a href=""><i class="fab fa-facebook-f"></i>Facebook</a></li>
+                <li><a href=""><i class="fab fa-instagram"></i>Instagram</a></li>
+                <li><a href=""><i class="fab fa-pinterest"></i>Pinterest</a></li>
+                <li><a href=""><i class="fab fa-weibo"></i>Weibo</a></li>
+            </ul>
+        </div>
+        <hr>
+        <div class="bottom-nav">
+            <ul>
+                <li><a href="">合作網頁</a></li>
+                <li><a href="">公司概要</a></li>
+                <li><a href="">IR資訊</a></li>
+                <li><a href="">採用訊息</a></li>
+                <li><a href="">使用條款</a></li>
+                <li><a href="">隱私條例</a></li>
+            </ul>
+        </div>
+        <hr>
+        <div class="right-reserved">
+            COPYRIGHT © ZOZO, Inc. ALL RIGHTS RESERVED.<br>
+            本網站内的文章、圖片等的著作權屬於ZOZO, Inc.所有。禁止複製、轉載。
+        </div>
+    </footer>
 </body>
 
 </html>
